# opengl-playground

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  generate-project-files.bat
CMake/: FindFreeImage.cmake  FindSDL2.cmake  Utilities.cmake
media/: light_pass.vs  point_light_pass.fs  post.fs  quad.vs  red.fs  red.vs  sample.fs  sample.vs
old-prototypes/: .clang-format  .gitignore  CMakeLists.txt  README.md  run
old-prototypes/src/: PrototypeFramework.cpp  PrototypeFramework.h
old-prototypes/src/galaxy/: Galaxy.cpp  Galaxy.h
old-prototypes/src/planet/: Main.cpp  Main.h  Planet.cpp  Planet.h  RingSystem.cpp  RingSystem.h  Terrain.cpp  Terrain.h  simplexnoise.cpp  simplexnoise.h
src/: Main.cpp  common.h  framebuffer.cpp  framebuffer.h  framework.cpp  framework.h  main.cpp  main.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h  utils.cpp  utils.h  vertexbuffer.cpp  vertexbuffer.h
src/deferred/: Main.cpp
src/framework/: Application.cpp  Application.h  CameraMan.cpp  CameraMan.h  Common.h  Framebuffer.cpp  Framebuffer.h  Framework.cpp  Framework.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  VertexBuffer.cpp  framebuffer.cpp  framebuffer.h  framework.cpp  shader.cpp  utils.cpp  vertexbuffer.cpp
src/galaxy/: Galaxy.cpp  Galaxy.h  Main.cpp
